parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Unused terminals:

    ENUM
    INTERFACE
    NEW

Grammar

Rule 0     S' -> CompilationUnit
Rule 1     CompilationUnit -> PACKAGE QualifiedIdentifier SEMICOLON importDeclaration typeDeclaration
Rule 2     CompilationUnit -> importDeclaration typeDeclaration
Rule 3     importDeclaration -> ImportDeclaration importDeclaration
Rule 4     importDeclaration -> <empty>
Rule 5     typeDeclaration -> TypeDeclaration typeDeclaration
Rule 6     typeDeclaration -> <empty>
Rule 7     QualifiedIdentifier -> IDENTIFIER
Rule 8     QualifiedIdentifier -> IDENTIFIER DOT QualifiedIdentifier
Rule 9     QualifiedIdentifierList -> QualifiedIdentifier
Rule 10    QualifiedIdentifierList -> QualifiedIdentifier COMMA QualifiedIdentifierList
Rule 11    ImportDeclaration -> IMPORT QualifiedIdentifier DOT_STAR SEMICOLON
Rule 12    ImportDeclaration -> IMPORT QualifiedIdentifier SEMICOLON
Rule 13    ImportDeclaration -> IMPORT STATIC QualifiedIdentifier SEMICOLON
Rule 14    ImportDeclaration -> IMPORT STATIC QualifiedIdentifier DOT_STAR SEMICOLON
Rule 15    TypeDeclaration -> ClassOrInterfaceDeclaration
Rule 16    TypeDeclaration -> SEMICOLON
Rule 17    ClassOrInterfaceDeclaration -> modifier ClassDeclaration
Rule 18    ClassDeclaration -> NormalClassDeclaration
Rule 19    NormalClassDeclaration -> CLASS IDENTIFIER ClassBody
Rule 20    NormalClassDeclaration -> CLASS IDENTIFIER EXTENDS Type ClassBody
Rule 21    NormalClassDeclaration -> CLASS IDENTIFIER IMPLEMENTS TypeList ClassBody
Rule 22    NormalClassDeclaration -> CLASS IDENTIFIER EXTENDS Type IMPLEMENTS TypeList ClassBody
Rule 23    square_brace -> <empty>
Rule 24    square_brace -> L_SQUARE_BRACE R_SQUARE_BRACE square_brace
Rule 25    modifier -> Modifier modifier
Rule 26    modifier -> <empty>
Rule 27    Type -> BasicType square_brace
Rule 28    Type -> QualifiedIdentifier square_brace
Rule 29    BasicType -> BYTE
Rule 30    BasicType -> SHORT
Rule 31    BasicType -> CHAR
Rule 32    BasicType -> INT
Rule 33    BasicType -> LONG
Rule 34    BasicType -> FLOAT
Rule 35    BasicType -> DOUBLE
Rule 36    BasicType -> BOOLEAN
Rule 37    TypeList -> QualifiedIdentifier
Rule 38    TypeList -> QualifiedIdentifier COMMA TypeList
Rule 39    Modifier -> PUBLIC
Rule 40    Modifier -> PROTECTED
Rule 41    Modifier -> PRIVATE
Rule 42    Modifier -> STATIC
Rule 43    Modifier -> ABSTRACT
Rule 44    Modifier -> FINAL
Rule 45    Modifier -> NATIVE
Rule 46    Modifier -> SYNCHRONIZED
Rule 47    Modifier -> TRANSIENT
Rule 48    Modifier -> VOLATILE
Rule 49    Modifier -> STRICTFP
Rule 50    ClassBody -> L_CURL_BRACE classBodyDeclaration R_CURL_BRACE
Rule 51    classBodyDeclaration -> ClassBodyDeclaration classBodyDeclaration
Rule 52    classBodyDeclaration -> <empty>
Rule 53    ClassBodyDeclaration -> SEMICOLON
Rule 54    ClassBodyDeclaration -> modifier MemberDecl
Rule 55    ClassBodyDeclaration -> STATIC Block
Rule 56    ClassBodyDeclaration -> Block
Rule 57    MemberDecl -> MethodOrFieldDecl
Rule 58    MemberDecl -> VOID IDENTIFIER VoidMethodDeclaratorRest
Rule 59    MemberDecl -> ClassDeclaration
Rule 60    MethodOrFieldDecl -> Type IDENTIFIER MethodOrFieldRest
Rule 61    MethodOrFieldRest -> FieldDeclaratorsRest SEMICOLON
Rule 62    MethodOrFieldRest -> MethodDeclaratorRest
Rule 63    variableDeclarator -> COMMA VariableDeclarator variableDeclarator
Rule 64    variableDeclarator -> <empty>
Rule 65    FieldDeclaratorsRest -> VariableDeclaratorRest variableDeclarator
Rule 66    MethodDeclaratorRest -> FormalParameters Block
Rule 67    MethodDeclaratorRest -> FormalParameters SEMICOLON
Rule 68    MethodDeclaratorRest -> FormalParameters THROWS QualifiedIdentifierList Block
Rule 69    MethodDeclaratorRest -> FormalParameters THROWS QualifiedIdentifierList SEMICOLON
Rule 70    VoidMethodDeclaratorRest -> FormalParameters Block
Rule 71    VoidMethodDeclaratorRest -> FormalParameters SEMICOLON
Rule 72    VoidMethodDeclaratorRest -> FormalParameters THROWS QualifiedIdentifierList Block
Rule 73    VoidMethodDeclaratorRest -> FormalParameters THROWS QualifiedIdentifierList SEMICOLON
Rule 74    FormalParameters -> L_BRACE R_BRACE
Rule 75    FormalParameters -> L_BRACE FormalParameterDecls R_BRACE
Rule 76    variableModifier -> <empty>
Rule 77    variableModifier -> FINAL variableModifier
Rule 78    FormalParameterDecls -> Type FormalParameterDeclsRest
Rule 79    FormalParameterDecls -> variableModifier Type FormalParameterDeclsRest
Rule 80    FormalParameterDeclsRest -> VariableDeclaratorId
Rule 81    FormalParameterDeclsRest -> VariableDeclaratorId COMMA FormalParameterDecls
Rule 82    FormalParameterDeclsRest -> DOT DOT DOT VariableDeclaratorId
Rule 83    VariableDeclaratorId -> IDENTIFIER square_brace
Rule 84    VariableDeclarators -> VariableDeclarator
Rule 85    VariableDeclarators -> VariableDeclarator COMMA VariableDeclarators
Rule 86    VariableDeclarator -> IDENTIFIER VariableDeclaratorRest
Rule 87    VariableDeclaratorRest -> square_brace
Rule 88    VariableDeclaratorRest -> square_brace ASSIGNMENT VariableInitializer
Rule 89    VariableInitializer -> ArrayInitializer
Rule 90    VariableInitializer -> Expression
Rule 91    variableInitializer -> VariableInitializer
Rule 92    variableInitializer -> VariableInitializer COMMA variableInitializer
Rule 93    ArrayInitializer -> L_SQUARE_BRACE variableInitializer R_SQUARE_BRACE
Rule 94    ArrayInitializer -> L_SQUARE_BRACE variableInitializer R_SQUARE_BRACE COMMA
Rule 95    Block -> L_CURL_BRACE BlockStatements R_CURL_BRACE
Rule 96    BlockStatements -> BlockStatement BlockStatements
Rule 97    BlockStatements -> <empty>
Rule 98    BlockStatement -> LocalVariableDeclarationStatement
Rule 99    BlockStatement -> ClassOrInterfaceDeclaration
Rule 100   BlockStatement -> Statement
Rule 101   BlockStatement -> IDENTIFIER COLON Statement
Rule 102   LocalVariableDeclarationStatement -> Type VariableDeclarators SEMICOLON
Rule 103   LocalVariableDeclarationStatement -> variableModifier Type VariableDeclarators SEMICOLON
Rule 104   Statement -> Block
Rule 105   Statement -> SEMICOLON
Rule 106   Statement -> StatementExpression SEMICOLON
Rule 107   Statement -> IF ParExpression Statement
Rule 108   Statement -> IF ParExpression Statement ELSE Statement
Rule 109   Statement -> ASSERT Expression SEMICOLON
Rule 110   Statement -> ASSERT Expression COLON Expression SEMICOLON
Rule 111   Statement -> SWITCH ParExpression L_CURL_BRACE SwitchBlockStatementGroups R_CURL_BRACE
Rule 112   Statement -> WHILE ParExpression Statement
Rule 113   Statement -> DO Statement WHILE ParExpression SEMICOLON
Rule 114   Statement -> FOR L_BRACE ForControl R_BRACE Statement
Rule 115   Statement -> BREAK SEMICOLON
Rule 116   Statement -> BREAK IDENTIFIER SEMICOLON
Rule 117   Statement -> CONTINUE SEMICOLON
Rule 118   Statement -> CONTINUE IDENTIFIER SEMICOLON
Rule 119   Statement -> RETURN SEMICOLON
Rule 120   Statement -> RETURN Expression SEMICOLON
Rule 121   Statement -> THROW Expression SEMICOLON
Rule 122   Statement -> SYNCHRONIZED ParExpression Block
Rule 123   StatementExpression -> Expression
Rule 124   SwitchBlockStatementGroups -> SwitchBlockStatementGroup SwitchBlockStatementGroups
Rule 125   SwitchBlockStatementGroups -> <empty>
Rule 126   SwitchBlockStatementGroup -> SwitchLabels BlockStatements
Rule 127   SwitchLabels -> SwitchLabel
Rule 128   SwitchLabels -> SwitchLabel SwitchLabels
Rule 129   SwitchLabel -> CASE Expression COLON
Rule 130   SwitchLabel -> DEFAULT COLON
Rule 131   ForControl -> ForVarControl
Rule 132   ForControl -> ForUpdate SEMICOLON SEMICOLON
Rule 133   ForControl -> ForUpdate SEMICOLON Expression SEMICOLON
Rule 134   ForControl -> ForUpdate SEMICOLON SEMICOLON ForUpdate
Rule 135   ForControl -> ForUpdate SEMICOLON Expression SEMICOLON ForUpdate
Rule 136   ForVarControl -> Type VariableDeclaratorId ForVarControlRest
Rule 137   ForVarControl -> variableModifier Type VariableDeclaratorId ForVarControlRest
Rule 138   ForVarControlRest -> ForVariableDeclaratorsRest SEMICOLON SEMICOLON
Rule 139   ForVarControlRest -> ForVariableDeclaratorsRest SEMICOLON Expression SEMICOLON
Rule 140   ForVarControlRest -> ForVariableDeclaratorsRest SEMICOLON SEMICOLON ForUpdate
Rule 141   ForVarControlRest -> ForVariableDeclaratorsRest SEMICOLON Expression SEMICOLON ForUpdate
Rule 142   ForVarControlRest -> COLON Expression
Rule 143   ForVariableDeclaratorsRest -> ASSIGNMENT VariableInitializer variableDeclarator
Rule 144   ForUpdate -> StatementExpression
Rule 145   ForUpdate -> StatementExpression COMMA ForUpdate
Rule 146   Expression -> Expression1
Rule 147   Expression -> Expression1 AssignmentOperator Expression1
Rule 148   AssignmentOperator -> ASSIGNMENT
Rule 149   AssignmentOperator -> PLUS_ASSIGNMENT
Rule 150   AssignmentOperator -> MINUS_ASSIGNMENT
Rule 151   AssignmentOperator -> TIMES_ASSIGNMENT
Rule 152   AssignmentOperator -> DIVIDE_ASSIGNMENT
Rule 153   AssignmentOperator -> AND_ASSIGNMENT
Rule 154   AssignmentOperator -> OR_ASSIGNMENT
Rule 155   AssignmentOperator -> POWER_ASSIGNMENT
Rule 156   AssignmentOperator -> MOD_ASSIGNMENT
Rule 157   AssignmentOperator -> L_SHIFT_ASSIGNMENT
Rule 158   AssignmentOperator -> R_SHIFT_ASSIGNMENT
Rule 159   AssignmentOperator -> RR_SHIFT_ASSIGNMENT
Rule 160   Expression1 -> Expression2
Rule 161   Expression1 -> Expression2 Expression1Rest
Rule 162   Expression1Rest -> EXPLAMETARY Expression COLON Expression1
Rule 163   Expression2 -> Expression3
Rule 164   Expression2 -> Expression3 Expression2Rest
Rule 165   infixOp_expression3 -> InfixOp Expression3 infixOp_expression3
Rule 166   infixOp_expression3 -> <empty>
Rule 167   Expression2Rest -> InfixOp Expression3 infixOp_expression3
Rule 168   Expression2Rest -> INSTANCEOF Type
Rule 169   InfixOp -> OR
Rule 170   InfixOp -> AND
Rule 171   InfixOp -> POWER
Rule 172   InfixOp -> EQUAL
Rule 173   InfixOp -> NOT_EQUAL
Rule 174   InfixOp -> LT
Rule 175   InfixOp -> GT
Rule 176   InfixOp -> LE
Rule 177   InfixOp -> GE
Rule 178   InfixOp -> L_SHIFT
Rule 179   InfixOp -> R_SHIFT
Rule 180   InfixOp -> RR_SHIFT
Rule 181   InfixOp -> PLUS
Rule 182   InfixOp -> MINUS
Rule 183   InfixOp -> TIMES
Rule 184   InfixOp -> DIVIDE
Rule 185   InfixOp -> MOD
Rule 186   postfixOp -> PostfixOp postfixOp
Rule 187   postfixOp -> <empty>
Rule 188   Expression3 -> PrefixOp Expression3
Rule 189   Expression3 -> L_BRACE Expression R_BRACE Expression3
Rule 190   Expression3 -> L_BRACE Type R_BRACE Expression3
Rule 191   Expression3 -> Primary DOT QualifiedIdentifier postfixOp
Rule 192   Expression3 -> Primary postfixOp
Rule 193   PrefixOp -> PLUS_PLUS
Rule 194   PrefixOp -> MINUS_MINUS
Rule 195   PrefixOp -> NOT
Rule 196   PrefixOp -> CURL_DASH
Rule 197   PrefixOp -> PLUS
Rule 198   PrefixOp -> MINUS
Rule 199   PostfixOp -> PLUS_PLUS
Rule 200   PostfixOp -> MINUS_MINUS
Rule 201   Primary -> Literal
Rule 202   Primary -> ParExpression
Rule 203   Primary -> THIS
Rule 204   Primary -> THIS Arguments
Rule 205   Primary -> SUPER SuperSuffix
Rule 206   Primary -> QualifiedIdentifier
Rule 207   Primary -> QualifiedIdentifier IdentifierSuffix
Rule 208   Primary -> BasicType square_brace DOT CLASS
Rule 209   Primary -> VOID DOT CLASS
Rule 210   Literal -> LITERAL
Rule 211   Literal -> NUMBER
Rule 212   ParExpression -> L_BRACE Expression R_BRACE
Rule 213   ExpressionList -> Expression
Rule 214   ExpressionList -> Expression COMMA ExpressionList
Rule 215   Arguments -> L_BRACE ExpressionList L_BRACE
Rule 216   SuperSuffix -> Arguments
Rule 217   SuperSuffix -> DOT IDENTIFIER Arguments
Rule 218   IdentifierSuffix -> L_BRACE square_brace DOT CLASS R_BRACE
Rule 219   IdentifierSuffix -> L_BRACE square_brace DOT Expression R_BRACE
Rule 220   IdentifierSuffix -> Arguments
Rule 221   IdentifierSuffix -> DOT CLASS
Rule 222   IdentifierSuffix -> DOT THIS
Rule 223   IdentifierSuffix -> DOT SUPER Arguments

Terminals, with rules where they appear

ABSTRACT             : 43
AND                  : 170
AND_ASSIGNMENT       : 153
ASSERT               : 109 110
ASSIGNMENT           : 88 143 148
BOOLEAN              : 36
BREAK                : 115 116
BYTE                 : 29
CASE                 : 129
CHAR                 : 31
CLASS                : 19 20 21 22 208 209 218 221
COLON                : 101 110 129 130 142 162
COMMA                : 10 38 63 81 85 92 94 145 214
CONTINUE             : 117 118
CURL_DASH            : 196
DEFAULT              : 130
DIVIDE               : 184
DIVIDE_ASSIGNMENT    : 152
DO                   : 113
DOT                  : 8 82 82 82 191 208 209 217 218 219 221 222 223
DOT_STAR             : 11 14
DOUBLE               : 35
ELSE                 : 108
ENUM                 : 
EQUAL                : 172
EXPLAMETARY          : 162
EXTENDS              : 20 22
FINAL                : 44 77
FLOAT                : 34
FOR                  : 114
GE                   : 177
GT                   : 175
IDENTIFIER           : 7 8 19 20 21 22 58 60 83 86 101 116 118 217
IF                   : 107 108
IMPLEMENTS           : 21 22
IMPORT               : 11 12 13 14
INSTANCEOF           : 168
INT                  : 32
INTERFACE            : 
LE                   : 176
LITERAL              : 210
LONG                 : 33
LT                   : 174
L_BRACE              : 74 75 114 189 190 212 215 215 218 219
L_CURL_BRACE         : 50 95 111
L_SHIFT              : 178
L_SHIFT_ASSIGNMENT   : 157
L_SQUARE_BRACE       : 24 93 94
MINUS                : 182 198
MINUS_ASSIGNMENT     : 150
MINUS_MINUS          : 194 200
MOD                  : 185
MOD_ASSIGNMENT       : 156
NATIVE               : 45
NEW                  : 
NOT                  : 195
NOT_EQUAL            : 173
NUMBER               : 211
OR                   : 169
OR_ASSIGNMENT        : 154
PACKAGE              : 1
PLUS                 : 181 197
PLUS_ASSIGNMENT      : 149
PLUS_PLUS            : 193 199
POWER                : 171
POWER_ASSIGNMENT     : 155
PRIVATE              : 41
PROTECTED            : 40
PUBLIC               : 39
RETURN               : 119 120
RR_SHIFT             : 180
RR_SHIFT_ASSIGNMENT  : 159
R_BRACE              : 74 75 114 189 190 212 218 219
R_CURL_BRACE         : 50 95 111
R_SHIFT              : 179
R_SHIFT_ASSIGNMENT   : 158
R_SQUARE_BRACE       : 24 93 94
SEMICOLON            : 1 11 12 13 14 16 53 61 67 69 71 73 102 103 105 106 109 110 113 115 116 117 118 119 120 121 132 132 133 133 134 134 135 135 138 138 139 139 140 140 141 141
SHORT                : 30
STATIC               : 13 14 42 55
STRICTFP             : 49
SUPER                : 205 223
SWITCH               : 111
SYNCHRONIZED         : 46 122
THIS                 : 203 204 222
THROW                : 121
THROWS               : 68 69 72 73
TIMES                : 183
TIMES_ASSIGNMENT     : 151
TRANSIENT            : 47
VOID                 : 58 209
VOLATILE             : 48
WHILE                : 112 113
error                : 

Nonterminals, with rules where they appear

Arguments            : 204 216 217 220 223
ArrayInitializer     : 89
AssignmentOperator   : 147
BasicType            : 27 208
Block                : 55 56 66 68 70 72 104 122
BlockStatement       : 96
BlockStatements      : 95 96 126
ClassBody            : 19 20 21 22
ClassBodyDeclaration : 51
ClassDeclaration     : 17 59
ClassOrInterfaceDeclaration : 15 99
CompilationUnit      : 0
Expression           : 90 109 110 110 120 121 123 129 133 135 139 141 142 162 189 212 213 214 219
Expression1          : 146 147 147 162
Expression1Rest      : 161
Expression2          : 160 161
Expression2Rest      : 164
Expression3          : 163 164 165 167 188 189 190
ExpressionList       : 214 215
FieldDeclaratorsRest : 61
ForControl           : 114
ForUpdate            : 132 133 134 134 135 135 140 141 145
ForVarControl        : 131
ForVarControlRest    : 136 137
ForVariableDeclaratorsRest : 138 139 140 141
FormalParameterDecls : 75 81
FormalParameterDeclsRest : 78 79
FormalParameters     : 66 67 68 69 70 71 72 73
IdentifierSuffix     : 207
ImportDeclaration    : 3
InfixOp              : 165 167
Literal              : 201
LocalVariableDeclarationStatement : 98
MemberDecl           : 54
MethodDeclaratorRest : 62
MethodOrFieldDecl    : 57
MethodOrFieldRest    : 60
Modifier             : 25
NormalClassDeclaration : 18
ParExpression        : 107 108 111 112 113 122 202
PostfixOp            : 186
PrefixOp             : 188
Primary              : 191 192
QualifiedIdentifier  : 1 8 9 10 11 12 13 14 28 37 38 191 206 207
QualifiedIdentifierList : 10 68 69 72 73
Statement            : 100 101 107 108 108 112 113 114
StatementExpression  : 106 144 145
SuperSuffix          : 205
SwitchBlockStatementGroup : 124
SwitchBlockStatementGroups : 111 124
SwitchLabel          : 127 128
SwitchLabels         : 126 128
Type                 : 20 22 60 78 79 102 103 136 137 168 190
TypeDeclaration      : 5
TypeList             : 21 22 38
VariableDeclarator   : 63 84 85
VariableDeclaratorId : 80 81 82 136 137
VariableDeclaratorRest : 65 86
VariableDeclarators  : 85 102 103
VariableInitializer  : 88 91 92 143
VoidMethodDeclaratorRest : 58
classBodyDeclaration : 50 51
importDeclaration    : 1 2 3
infixOp_expression3  : 165 167
modifier             : 17 25 54
postfixOp            : 186 191 192
square_brace         : 24 27 28 83 87 88 208 218 219
typeDeclaration      : 1 2 5
variableDeclarator   : 63 65 143
variableInitializer  : 92 93 94
variableModifier     : 77 79 103 137

Parsing method: LALR

state 0

    (0) S' -> . CompilationUnit
    (1) CompilationUnit -> . PACKAGE QualifiedIdentifier SEMICOLON importDeclaration typeDeclaration
    (2) CompilationUnit -> . importDeclaration typeDeclaration
    (3) importDeclaration -> . ImportDeclaration importDeclaration
    (4) importDeclaration -> .
    (11) ImportDeclaration -> . IMPORT QualifiedIdentifier DOT_STAR SEMICOLON
    (12) ImportDeclaration -> . IMPORT QualifiedIdentifier SEMICOLON
    (13) ImportDeclaration -> . IMPORT STATIC QualifiedIdentifier SEMICOLON
    (14) ImportDeclaration -> . IMPORT STATIC QualifiedIdentifier DOT_STAR SEMICOLON

    PACKAGE         shift and go to state 1
    SEMICOLON       reduce using rule 4 (importDeclaration -> .)
    PUBLIC          reduce using rule 4 (importDeclaration -> .)
    PROTECTED       reduce using rule 4 (importDeclaration -> .)
    PRIVATE         reduce using rule 4 (importDeclaration -> .)
    STATIC          reduce using rule 4 (importDeclaration -> .)
    ABSTRACT        reduce using rule 4 (importDeclaration -> .)
    FINAL           reduce using rule 4 (importDeclaration -> .)
    NATIVE          reduce using rule 4 (importDeclaration -> .)
    SYNCHRONIZED    reduce using rule 4 (importDeclaration -> .)
    TRANSIENT       reduce using rule 4 (importDeclaration -> .)
    VOLATILE        reduce using rule 4 (importDeclaration -> .)
    STRICTFP        reduce using rule 4 (importDeclaration -> .)
    CLASS           reduce using rule 4 (importDeclaration -> .)
    $end            reduce using rule 4 (importDeclaration -> .)
    IMPORT          shift and go to state 4

    importDeclaration              shift and go to state 2
    CompilationUnit                shift and go to state 5
    ImportDeclaration              shift and go to state 3

state 1

    (1) CompilationUnit -> PACKAGE . QualifiedIdentifier SEMICOLON importDeclaration typeDeclaration
    (7) QualifiedIdentifier -> . IDENTIFIER
    (8) QualifiedIdentifier -> . IDENTIFIER DOT QualifiedIdentifier

    IDENTIFIER      shift and go to state 7

    QualifiedIdentifier            shift and go to state 6

state 2

    (2) CompilationUnit -> importDeclaration . typeDeclaration
    (5) typeDeclaration -> . TypeDeclaration typeDeclaration
    (6) typeDeclaration -> .
    (15) TypeDeclaration -> . ClassOrInterfaceDeclaration
    (16) TypeDeclaration -> . SEMICOLON
    (17) ClassOrInterfaceDeclaration -> . modifier ClassDeclaration
    (25) modifier -> . Modifier modifier
    (26) modifier -> .
    (39) Modifier -> . PUBLIC
    (40) Modifier -> . PROTECTED
    (41) Modifier -> . PRIVATE
    (42) Modifier -> . STATIC
    (43) Modifier -> . ABSTRACT
    (44) Modifier -> . FINAL
    (45) Modifier -> . NATIVE
    (46) Modifier -> . SYNCHRONIZED
    (47) Modifier -> . TRANSIENT
    (48) Modifier -> . VOLATILE
    (49) Modifier -> . STRICTFP

    $end            reduce using rule 6 (typeDeclaration -> .)
    SEMICOLON       shift and go to state 11
    CLASS           reduce using rule 26 (modifier -> .)
    PUBLIC          shift and go to state 23
    PROTECTED       shift and go to state 20
    PRIVATE         shift and go to state 17
    STATIC          shift and go to state 21
    ABSTRACT        shift and go to state 19
    FINAL           shift and go to state 18
    NATIVE          shift and go to state 24
    SYNCHRONIZED    shift and go to state 10
    TRANSIENT       shift and go to state 8
    VOLATILE        shift and go to state 13
    STRICTFP        shift and go to state 16

    TypeDeclaration                shift and go to state 9
    Modifier                       shift and go to state 14
    ClassOrInterfaceDeclaration    shift and go to state 12
    typeDeclaration                shift and go to state 15
    modifier                       shift and go to state 22

state 3

    (3) importDeclaration -> ImportDeclaration . importDeclaration
    (3) importDeclaration -> . ImportDeclaration importDeclaration
    (4) importDeclaration -> .
    (11) ImportDeclaration -> . IMPORT QualifiedIdentifier DOT_STAR SEMICOLON
    (12) ImportDeclaration -> . IMPORT QualifiedIdentifier SEMICOLON
    (13) ImportDeclaration -> . IMPORT STATIC QualifiedIdentifier SEMICOLON
    (14) ImportDeclaration -> . IMPORT STATIC QualifiedIdentifier DOT_STAR SEMICOLON

    SEMICOLON       reduce using rule 4 (importDeclaration -> .)
    PUBLIC          reduce using rule 4 (importDeclaration -> .)
    PROTECTED       reduce using rule 4 (importDeclaration -> .)
    PRIVATE         reduce using rule 4 (importDeclaration -> .)
    STATIC          reduce using rule 4 (importDeclaration -> .)
    ABSTRACT        reduce using rule 4 (importDeclaration -> .)
    FINAL           reduce using rule 4 (importDeclaration -> .)
    NATIVE          reduce using rule 4 (importDeclaration -> .)
    SYNCHRONIZED    reduce using rule 4 (importDeclaration -> .)
    TRANSIENT       reduce using rule 4 (importDeclaration -> .)
    VOLATILE        reduce using rule 4 (importDeclaration -> .)
    STRICTFP        reduce using rule 4 (importDeclaration -> .)
    CLASS           reduce using rule 4 (importDeclaration -> .)
    $end            reduce using rule 4 (importDeclaration -> .)
    IMPORT          shift and go to state 4

    ImportDeclaration              shift and go to state 3
    importDeclaration              shift and go to state 25

state 4

    (11) ImportDeclaration -> IMPORT . QualifiedIdentifier DOT_STAR SEMICOLON
    (12) ImportDeclaration -> IMPORT . QualifiedIdentifier SEMICOLON
    (13) ImportDeclaration -> IMPORT . STATIC QualifiedIdentifier SEMICOLON
    (14) ImportDeclaration -> IMPORT . STATIC QualifiedIdentifier DOT_STAR SEMICOLON
    (7) QualifiedIdentifier -> . IDENTIFIER
    (8) QualifiedIdentifier -> . IDENTIFIER DOT QualifiedIdentifier

    STATIC          shift and go to state 27
    IDENTIFIER      shift and go to state 7

    QualifiedIdentifier            shift and go to state 26

state 5

    (0) S' -> CompilationUnit .



state 6

    (1) CompilationUnit -> PACKAGE QualifiedIdentifier . SEMICOLON importDeclaration typeDeclaration

    SEMICOLON       shift and go to state 28


state 7

    (7) QualifiedIdentifier -> IDENTIFIER .
    (8) QualifiedIdentifier -> IDENTIFIER . DOT QualifiedIdentifier

  ! shift/reduce conflict for DOT resolved as shift
    L_BRACE         reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    PLUS_PLUS       reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    MINUS_MINUS     reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    INSTANCEOF      reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    OR              reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    AND             reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    POWER           reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    EQUAL           reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    NOT_EQUAL       reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    LT              reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    GT              reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    LE              reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    GE              reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    L_SHIFT         reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    R_SHIFT         reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    RR_SHIFT        reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    PLUS            reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    MINUS           reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    TIMES           reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    DIVIDE          reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    MOD             reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    EXPLAMETARY     reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    ASSIGNMENT      reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    PLUS_ASSIGNMENT reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    MINUS_ASSIGNMENT reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    TIMES_ASSIGNMENT reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    DIVIDE_ASSIGNMENT reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    AND_ASSIGNMENT  reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    OR_ASSIGNMENT   reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    POWER_ASSIGNMENT reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    MOD_ASSIGNMENT  reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    L_SHIFT_ASSIGNMENT reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    R_SHIFT_ASSIGNMENT reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    RR_SHIFT_ASSIGNMENT reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    SEMICOLON       reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    L_SQUARE_BRACE  reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    R_BRACE         reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    COMMA           reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    COLON           reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    R_SQUARE_BRACE  reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    DOT_STAR        reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    L_CURL_BRACE    reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    IMPLEMENTS      reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .)
    DOT             shift and go to state 29

  ! DOT             [ reduce using rule 7 (QualifiedIdentifier -> IDENTIFIER .) ]


state 8

    (47) Modifier -> TRANSIENT .

    PUBLIC          reduce using rule 47 (Modifier -> TRANSIENT .)
    PROTECTED       reduce using rule 47 (Modifier -> TRANSIENT .)
    PRIVATE         reduce using rule 47 (Modifier -> TRANSIENT .)
    STATIC          reduce using rule 47 (Modifier -> TRANSIENT .)
    ABSTRACT        reduce using rule 47 (Modifier -> TRANSIENT .)
    FINAL           reduce using rule 47 (Modifier -> TRANSIENT .)
    NATIVE          reduce using rule 47 (Modifier -> TRANSIENT .)
    SYNCHRONIZED    reduce using rule 47 (Modifier -> TRANSIENT .)
    TRANSIENT       reduce using rule 47 (Modifier -> TRANSIENT .)
    VOLATILE        reduce using rule 47 (Modifier -> TRANSIENT .)
    STRICTFP        reduce using rule 47 (Modifier -> TRANSIENT .)
    CLASS           reduce using rule 47 (Modifier -> TRANSIENT .)
    VOID            reduce using rule 47 (Modifier -> TRANSIENT .)
    BYTE            reduce using rule 47 (Modifier -> TRANSIENT .)
    SHORT           reduce using rule 47 (Modifier -> TRANSIENT .)
    CHAR            reduce using rule 47 (Modifier -> TRANSIENT .)
    INT             reduce using rule 47 (Modifier -> TRANSIENT .)
    LONG            reduce using rule 47 (Modifier -> TRANSIENT .)
    FLOAT           reduce using rule 47 (Modifier -> TRANSIENT .)
    DOUBLE          reduce using rule 47 (Modifier -> TRANSIENT .)
    BOOLEAN         reduce using rule 47 (Modifier -> TRANSIENT .)
    IDENTIFIER      reduce using rule 47 (Modifier -> TRANSIENT .)


state 9

    (5) typeDeclaration -> TypeDeclaration . typeDeclaration
    (5) typeDeclaration -> . TypeDeclaration typeDeclaration
    (6) typeDeclaration -> .
    (15) TypeDeclaration -> . ClassOrInterfaceDeclaration
    (16) TypeDeclaration -> . SEMICOLON
    (17) ClassOrInterfaceDeclaration -> . modifier ClassDeclaration
    (25) modifier -> . Modifier modifier
    (26) modifier -> .
    (39) Modifier -> . PUBLIC
    (40) Modifier -> . PROTECTED
    (41) Modifier -> . PRIVATE
    (42) Modifier -> . STATIC
    (43) Modifier -> . ABSTRACT
    (44) Modifier -> . FINAL
    (45) Modifier -> . NATIVE
    (46) Modifier -> . SYNCHRONIZED
    (47) Modifier -> . TRANSIENT
    (48) Modifier -> . VOLATILE
    (49) Modifier -> . STRICTFP
